Fixed text alignment and function that will not display text depending on pie angle size

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -261,7 +261,6 @@ treemap-chart{
     background-color: red;
 }
 text{
-    color: white;
     height: 130px;
 }
 //Sidebar CHARTS
